Fix mobile spacing

--- a/Portfolio.WebClient/src/App.css
+++ b/Portfolio.WebClient/src/App.css
@@ -1,19 +1,16 @@
 ﻿#root,
-.PageContainer {
+.PageContainer,
+main {
     display: flex !important;
     text-align: center;
     flex-flow: column;
     align-items: center;
-    min-height: 100dvh;
 }
 
 main,
 .spacer {
     flex-grow: 1;
-}
-
-.page-padding {
-    height: 50dvh;
+    gap: 50dvh;
 }
 
 header.transparent {
@@ -35,27 +32,4 @@ header.blurred {
     -webkit-user-select: none;
     -ms-user-select: none;
     user-select: none;
-}
-
-
-.animation-zone {
-    opacity: 0;
-    transition: opacity 1s ease-out 0.25s;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-    .animation-zone-animation {
-        animation: slideUp 1.5s ease-out 0.25s;
-        opacity: 1;
-    }
-}
-
-@keyframes slideUp {
-    0% {
-        transform: translateY(25px);
-    }
-
-    100% {
-        transform: translateY(0px);
-    }
 }
